--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.22.2",
+    "@hookform/resolvers": "^2.8.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
@@ -17,7 +18,9 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.45.0"
+    "react-hook-form": "^7.22.2",
+    "sass": "^1.45.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.4.1",
