--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@hookform/resolvers": "^2.8.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
     "clsx": "^1.1.1",
     "macro-css": "^1.0.5",
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.22.2",
+    "react-redux": "^7.2.6",
     "sass": "^1.45.0",
     "yup": "^0.32.11"
   },
